--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
-.Rproj.user
-.Rhistory
-.RData
+.Rproj.user 
+.Rhistory 
+.RData 
 .Ruserdata
 data/CellO_data/trained_model_coefficients/cascaded_logistic_regression_coefficients.tsv.gz
 data/CellO_data/trained_model_coefficients/one_vs_rest_coefficients.tsv.gz
+data/CellO_data/technical_variable_annotation/experiment_tags.json
+data/CellO_data/non_droplet_single_cell/single_cell_labels.json
 data/CellO_data/non_droplet_single_cell/single_cell_log_tpm.h5
 data/CellO_data/bulk_RNA_seq_training_set/bulk_log_tpm.h5
+analysis/PLIER_initial_testing/plierResult_residual.csv
+analysis/PLIER_initial_testing/plierResult/C.csv
+analysis/PLIER_initial_testing/plierResult/Z.csv
+analysis/PLIER_initial_testing/plierResult/B.csv
+analysis/PLIER_initial_testing/plierResult/residual.csv
 analysis/PLIER_initial_testing/plierResult.rda
