Added new tasks for EDA

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,10 @@ analysis/PLIER_initial_testing/plierResult/Z.csv
 analysis/PLIER_initial_testing/plierResult/B.csv
 analysis/PLIER_initial_testing/plierResult/residual.csv
 analysis/PLIER_initial_testing/plierResult.rda
+.Rproj.user
+analysis/PLIER_initial_testing_Henry/plierResult_residual.csv
+analysis/PLIER_initial_testing_Henry/plierResult/C.csv
+analysis/PLIER_initial_testing_Henry/plierResult/Z.csv
+analysis/PLIER_initial_testing_Henry/plierResult/B.csv
+analysis/PLIER_initial_testing_Henry/plierResult/residual.csv
+analysis/PLIER_initial_testing_Henry/plierResult.rda
